API function Find Post by ID
